--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,38 +1,51 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+}
+.shopCard_menwomen{
+margin:3rem 0.8rem;
+/* border:1px solid; */
+font-weight: 700;
+}
+.profile-pic {
+	position: relative;
+	display: inline-block;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.profile-pic:hover .edit {
+	display: block;
+	padding-right: 8px;
+  margin: 1rem;
+  transition: ease 0.3s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.edit {
+	padding-top: 7px;	
+	padding-right: 4px;
+  margin: 0px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.shopCard_menwomen:hover{
+  padding: 1rem;
+  transition: all 0.3s;
 }
-
-.App-link {
-  color: #61dafb;
+.edit :hover{
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-wrapper {
+  position: relative;
+}
+.image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
+.image-hover:hover {
+  opacity: 1;
+  transition: ease-in-out 1s;
 }
