--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,38 +1,79 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@600&family=Poppins:wght@300&family=Roboto:wght@500&display=swap');
+
+.HeaderFont{
+  font-style: 'Alkatra', cursive;
+}
+
+.AppFont{
+  font-family: 'Poppins', sans-serif;
+}
+
+
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.shopCard_menwomen{
+margin:3rem 0.8rem;
+/* border:1px solid; */
+font-weight: 700;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.profile-pic {
+	position: relative;
+	display: inline-block;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.grid-navbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* default to 4 columns */
+  gap: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-item {
+  background-color: lightgray;
+  padding: 10px;
+}
+
+.profile-pic:hover .edit {
+	display: block;
+	padding-right: 8px;
+  margin: 1rem;
+  transition: ease 0.3s;
+}
+
+.edit {
+	padding-top: 7px;	
+	padding-right: 4px;
+  margin: 0px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: none;
+}
+
+.shopCard_menwomen:hover{
+  padding: 1rem;
+  transition: all 0.3s;
+}
+.edit :hover{
+
+}
+.image-wrapper {
+  position: relative;
+}
+.image-hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+}
+.image-hover:hover {
+  opacity: 1;
+  transition: ease-in-out 1s;
 }
