cart Slider added

--- a/front-end/src/ProductDetails..css
+++ b/front-end/src/ProductDetails..css
@@ -1,4 +1,4 @@
-.tabs h1{
+/* .tabs h1{
     font-size: 17px;
     font-weight:800;
     color: grey;
@@ -8,4 +8,4 @@
     font-weight:800;
     color: grey;
 }
-
+ */
